adding page with users for admin

--- a/src/main/resources/Messages_en.properties
+++ b/src/main/resources/Messages_en.properties
@@ -2,7 +2,7 @@ locale.home = HOME
 locale.orders = ORDERS
 locale.makeAnOrder = MAKE AN ORDER
 locale.listOfUsers = LIST OF USERS
-locale.createLabel = CREATE LABEL
+locale.createLabel = LABEL
 
 footer.home = Home
 footer.about = About
