--- a/src/main/resources/Messages_ru.properties
+++ b/src/main/resources/Messages_ru.properties
@@ -2,7 +2,7 @@ locale.home = ДОМОЙ
 locale.orders = ЗАКАЗЫ
 locale.makeAnOrder = СДЕЛАТЬ ЗАКАЗ
 locale.listOfUsers = СПИСОК ПОЛЬЗОВАТЕЛЕЙ
-locale.createLabel = СОЗДАТЬ АЛЬБОМ
+locale.createLabel = АЛЬБОМ
 
 footer.home = Домой
 footer.about = О проекте
